force-app/main/default/objects/CustomObject1__c/fields/A_N_PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>A_N_PASSWORD__c</fullName>
    <label>ACI CCN code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>