force-app/main/default/objects/CustomObject1__c/fields/A_O_A_CODE__c.field-meta.xml
<CustomField>
    <fullName>A_O_A_CODE__c</fullName>
    <description>POD (A.O.A) CODE</description>
    <formula>POD__r.CodeOfPort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A.O.A CODE</label>
    <type>Text</type>
</CustomField>