force-app/main/default/objects/CustomObject1__c/fields/A_O_D_CODE__c.field-meta.xml
<CustomField>
    <fullName>A_O_D_CODE__c</fullName>
    <description>POL (A.O.D) CODE</description>
    <formula>POL__r.CodeOfPort__c</formula>
    <label>A.O.D CODE</label>
    <type>Text</type>
</CustomField>