force-app/main/default/objects/CustomObject1__c/fields/Account_Cnee_Eng_name__c.field-meta.xml
<CustomField>
    <fullName>Account_Cnee_Eng_name__c</fullName>
    <formula>Cnee__r.EnglishCompanyName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Cnee Eng name</label>
    <type>Text</type>
</CustomField>