force-app/main/default/objects/CustomObject1__c/fields/Account_Customer_Eng_name__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Eng_name__c</fullName>
    <formula>Field1__r.EnglishCompanyName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Customer Eng name</label>
    <type>Text</type>
</CustomField>