force-app/main/default/objects/CustomObject1__c/fields/AcquiringDate__c.field-meta.xml
<CustomField>
    <fullName>AcquiringDate__c</fullName>
    <label>CONTRACTING DATE</label>
    <type>DateTime</type>
</CustomField>