force-app/main/default/objects/CustomObject1__c/fields/ADDRESS_ON_B_L__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS_ON_B_L__c</fullName>
    <inlineHelpText>Input the Address for L/C or special case when Address on B/L is different from English Address.</inlineHelpText>
    <label>SHIPPER ADDRESS ON B/L</label>
    <type>TextArea</type>
</CustomField>