force-app/main/default/objects/CustomObject1__c/fields/AFR_COMMENTS__c.field-meta.xml
<CustomField>
    <fullName>AFR_COMMENTS__c</fullName>
    <label>NOTES FOR AFR/AMS FILING</label>
    <type>TextArea</type>
</CustomField>