force-app/main/default/objects/CustomObject1__c/fields/alert_email__c.field-meta.xml
<CustomField>
    <fullName>alert_email__c</fullName>
    <formula>Field1__r.mail__c</formula>
    <label>EMAIL TO</label>
    <type>Text</type>
</CustomField>