force-app/main/default/objects/CustomObject1__c/fields/AmountTaxSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxSellingLocal__c</fullName>
    <label>Amount of Tax-Selling(Local)</label>
    <summarizedField>AnkenMeisai__c.SellTaxNum__c</summarizedField>
    <summaryForeignKey>AnkenMeisai__c.Anken__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>