force-app/main/default/objects/CustomObject1__c/fields/ANRemark__c.field-meta.xml
<CustomField>
    <fullName>ANRemark__c</fullName>
    <label>A/N Remark</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>