force-app/main/default/objects/CustomObject1__c/fields/Ararigaku_sum__c.field-meta.xml
<CustomField>
    <fullName>Ararigaku_sum__c</fullName>
    <label>PROFITS(LOCAL)</label>
    <summarizedField>AnkenMeisai__c.Ararigaku__c</summarizedField>
    <summaryForeignKey>AnkenMeisai__c.Anken__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>