force-app/main/default/objects/CustomObject1__c/fields/B_L_PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>B_L_PASSWORD__c</fullName>
    <label>CONSIGNEE&apos;S ADDRESS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>