force-app/main/default/objects/CustomObject1__c/fields/BadDebtUSD__c.field-meta.xml
<CustomField>
    <fullName>BadDebtUSD__c</fullName>
    <label>BAD DEBT(USD)</label>
    <summarizedField>AnkenMeisai__c.UNPAID_BALANCE_OF_SELLING_USD__c</summarizedField>
    <summaryForeignKey>AnkenMeisai__c.Anken__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>