force-app/main/default/objects/CustomObject1__c/fields/Billing_Invoice_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Billing_Invoice_Remarks__c</fullName>
    <label>Billing Invoice Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>