force-app/main/default/objects/CustomObject1__c/fields/BillNumber__c.field-meta.xml
<CustomField>
    <fullName>BillNumber__c</fullName>
    <label>INVOICE NUMBER</label>
    <length>20</length>
    <type>Text</type>
</CustomField>