force-app/main/default/objects/CustomObject1__c/fields/BL_withdraw__c.field-meta.xml
<CustomField>
    <fullName>BL_withdraw__c</fullName>
    <label>STATUS OF ORIGINAL B/L COLLECTION</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BLtype__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>回収予定(Expected to collect)</fullName>
            </value>
            <value>
                <fullName>回収済(Collected)</fullName>
            </value>
            <value>
                <fullName>未回収(Not collected)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>