force-app/main/default/objects/CustomObject1__c/fields/BLtype__c.field-meta.xml
<CustomField>
    <fullName>BLtype__c</fullName>
    <label>House B/L Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ORIGINAL</fullName>
            </value>
            <value>
                <fullName>SURRENDERED</fullName>
            </value>
            <value>
                <fullName>WAYBILL</fullName>
            </value>
            <value>
                <fullName>DRAFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>