force-app/main/default/objects/CustomObject1__c/fields/BookingDate__c.field-meta.xml
<CustomField>
    <fullName>BookingDate__c</fullName>
    <label>BOOKING DATE</label>
    <type>Date</type>
</CustomField>