force-app/main/default/objects/CustomObject1__c/fields/BookingNo__c.field-meta.xml
<CustomField>
    <fullName>BookingNo__c</fullName>
    <label>BOOKING NO</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>