force-app/main/default/objects/CustomObject1__c/fields/BookingNv__c.field-meta.xml
<CustomField>
    <fullName>BookingNv__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter Shipping Company in case of FCL, Co-loader in case of LCL, Your company in case of Consolidation</inlineHelpText>
    <label>MASTER CARRIER/CONSOLIDATOR</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>booking</relationshipName>
    <type>Lookup</type>
</CustomField>