force-app/main/default/objects/CustomObject1__c/fields/BREAK_BULK_INVOICE_LINK__c.field-meta.xml
<CustomField>
    <fullName>BREAK_BULK_INVOICE_LINK__c</fullName>
    <label>BB Invoice Link</label>
    <type>Url</type>
</CustomField>