force-app/main/default/objects/CustomObject1__c/fields/BREAL_BULK_INVOICE_PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>BREAL_BULK_INVOICE_PASSWORD__c</fullName>
    <label>Transit Carrier Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>