force-app/main/default/objects/CustomObject1__c/fields/BuyAmountUSD_sum__c.field-meta.xml
<CustomField>
    <fullName>BuyAmountUSD_sum__c</fullName>
    <label>SUM OF BUYING(USD)</label>
    <summarizedField>AnkenMeisai__c.BuyAmountUSD__c</summarizedField>
    <summaryForeignKey>AnkenMeisai__c.Anken__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>