force-app/main/default/objects/CustomObject1__c/fields/BuyDifferentiation_sum2__c.field-meta.xml
<CustomField>
    <fullName>BuyDifferentiation_sum2__c</fullName>
    <formula>BuyInTaxAmountJPY_sum__c -  Siharaigaku_sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BALANCE OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>