force-app/main/default/objects/CustomObject1__c/fields/BUYING__c.field-meta.xml
<CustomField>
    <fullName>BUYING__c</fullName>
    <label>EXCHANGE RATE FOR BUYING</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>