force-app/main/default/objects/CustomObject1__c/fields/BuyInTaxAmountJPY_sum__c.field-meta.xml
<CustomField>
    <fullName>BuyInTaxAmountJPY_sum__c</fullName>
    <label>TOTAL AMMOUT OF BUYING WITH TAX(LOCAL)</label>
    <summarizedField>AnkenMeisai__c.BuyInTaxAmountJPY__c</summarizedField>
    <summaryForeignKey>AnkenMeisai__c.Anken__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>