force-app/main/default/objects/CustomObject1__c/fields/C_W_Dimension_dev__c.field-meta.xml
<CustomField>
    <fullName>C_W_Dimension_dev__c</fullName>
    <label>C.W(Dimension)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>