force-app/main/default/objects/CustomObject1__c/fields/CARGO_CLOSING_TIME__c.field-meta.xml
<CustomField>
    <fullName>CARGO_CLOSING_TIME__c</fullName>
    <inlineHelpText>Deadline for cargo delivered into CY or CFS Warehouse</inlineHelpText>
    <label>CARGO CLOSING TIME</label>
    <type>DateTime</type>
</CustomField>