force-app/main/default/objects/CustomObject1__c/fields/CarrierCode__c.field-meta.xml
<CustomField>
    <fullName>CarrierCode__c</fullName>
    <label>Carrier Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>