force-app/main/default/objects/CustomObject1__c/fields/CarrierCodeMBLNo__c.field-meta.xml
<CustomField>
    <fullName>CarrierCodeMBLNo__c</fullName>
    <label>Carrier Code+M B/L No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>