force-app/main/default/objects/CustomObject1__c/fields/CarrierCost__c.field-meta.xml
<CustomField>
    <fullName>CarrierCost__c</fullName>
    <label>WHO PAY FOR CARRIER COST</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>貴社立替</fullName>
                <default>true</default>
                <label>貴社立替</label>
            </value>
            <value>
                <fullName>当社支払い</fullName>
            </value>
            <value>
                <fullName>お客様支払い</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>