force-app/main/default/objects/CustomObject1__c/fields/CarrierType__c.field-meta.xml
<CustomField>
    <fullName>CarrierType__c</fullName>
    <label>TRANSPORT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SEA</fullName>
                <default>true</default>
                <label>SEA</label>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
            <value>
                <fullName>INLAND</fullName>
            </value>
            <value>
                <fullName>RIVER</fullName>
            </value>
            <value>
                <fullName>RAIL</fullName>
            </value>
            <value>
                <fullName>SEA&amp;AIR</fullName>
            </value>
            <value>
                <fullName>SEA&amp;INLAND</fullName>
            </value>
            <value>
                <fullName>SEA&amp;RIVER</fullName>
            </value>
            <value>
                <fullName>SEA&amp;RAIL</fullName>
            </value>
            <value>
                <fullName>AIR&amp;INLAND</fullName>
            </value>
            <value>
                <fullName>AIR&amp;RIVER</fullName>
            </value>
            <value>
                <fullName>AIR&amp;RAIL</fullName>
            </value>
            <value>
                <fullName>INLAND&amp;RIVER</fullName>
            </value>
            <value>
                <fullName>INLAND&amp;RAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>