force-app/main/default/objects/CustomObject1__c/fields/CBM__c.field-meta.xml
<CustomField>
    <fullName>CBM__c</fullName>
    <inlineHelpText>Synchronized with Sum of Measurement(CBM) in CNTR IN TRANS When below conditions meet; Container Mode is FCL, Container Type and Container Q&apos;ty are is not null, Measurement(CBM) in CNTR IN TRANS is not null.</inlineHelpText>
    <label>MEASUREMENT(TOTAL CBM)</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>