force-app/main/default/objects/CustomObject1__c/fields/CBM_Non_Zero__c.field-meta.xml
<CustomField>
    <fullName>CBM_Non_Zero__c</fullName>
    <formula>IF( ISBLANK(CBM__c) , 0, CBM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CBM Non Zero</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>