force-app/main/default/objects/CustomObject1__c/fields/CC_LINK__c.field-meta.xml
<CustomField>
    <fullName>CC_LINK__c</fullName>
    <inlineHelpText>Paste the link for Customs Clearance Document generated in &apos;Content Deliveries&apos;. Also paste the password from Content Deliveries into &apos;Customs Clearance Document Password&apos;</inlineHelpText>
    <label>CUSTOMS CLEARANCE DOCUMENT LINK</label>
    <type>Url</type>
</CustomField>