force-app/main/default/objects/CustomObject1__c/fields/CC_PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>CC_PASSWORD__c</fullName>
    <label>CUSTOMS CLEARANCE DOCUMENT PASSWORD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>