force-app/main/default/objects/CustomObject1__c/fields/chargable_weight__c.field-meta.xml
<CustomField>
    <fullName>chargable_weight__c</fullName>
    <label>CHARGABLE WEIGHT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>