force-app/main/default/objects/CustomObject1__c/fields/CHECK_B_L_PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>CHECK_B_L_PASSWORD__c</fullName>
    <label>NOTIFY PARTY&apos;S ADDRESS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>