force-app/main/default/objects/CustomObject1__c/fields/Cnee__c.field-meta.xml
<CustomField>
    <fullName>Cnee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Cnee</relationshipName>
    <type>Lookup</type>
</CustomField>