force-app/main/default/objects/CustomObject1__c/fields/CNEE_ADDRESS_ON_B_L__c.field-meta.xml
<CustomField>
    <fullName>CNEE_ADDRESS_ON_B_L__c</fullName>
    <inlineHelpText>Input the CNEE company name and Address for B/L or special case when Address on B/L is different from English Address.</inlineHelpText>
    <label>CNEE ADDRESS ON B/L</label>
    <type>TextArea</type>
</CustomField>