force-app/main/default/objects/CustomObject1__c/fields/cnt__c.field-meta.xml
<CustomField>
    <fullName>cnt__c</fullName>
    <label>NUMBER OF H B/L INVOICE DETAIL</label>
    <summaryForeignKey>AnkenMeisai__c.Anken__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>