force-app/main/default/objects/CustomObject1__c/fields/Co_loader__c.field-meta.xml
<CustomField>
    <fullName>Co_loader__c</fullName>
    <label>Co-loader</label>
    <type>TextArea</type>
</CustomField>