force-app/main/default/objects/CustomObject1__c/fields/Co_loaderRep__c.field-meta.xml
<CustomField>
    <fullName>Co_loaderRep__c</fullName>
    <label>PIC OF CONSOLIDATOR</label>
    <type>TextArea</type>
</CustomField>