force-app/main/default/objects/CustomObject1__c/fields/Company_Info__c.field-meta.xml
<CustomField>
    <fullName>Company_Info__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Company_Name__c
&amp; BR() &amp; 
$Setup.Site_Custom_Settings__c.Company_Address__c
&amp; BR() &amp; 
&quot;TEL: &quot;&amp; $Setup.Site_Custom_Settings__c.Company_Phone__c
&amp; BR() &amp; 
&quot;FAX: &quot;&amp; $Setup.Site_Custom_Settings__c.Company_Fax__c</formula>
    <label>WK.COMPANY INFORMATION</label>
    <type>Text</type>
</CustomField>