force-app/main/default/objects/CustomObject1__c/fields/ConsigneeCountryCode__c.field-meta.xml
<CustomField>
    <fullName>ConsigneeCountryCode__c</fullName>
    <formula>text( Cnee__r.BillingCountryCode__c )</formula>
    <label>Consignee Country Code</label>
    <type>Text</type>
</CustomField>