force-app/main/default/objects/CustomObject1__c/fields/ConsigneeEnglishCompanyName__c.field-meta.xml
<CustomField>
    <fullName>ConsigneeEnglishCompanyName__c</fullName>
    <formula>Cnee__r.EnglishCompanyName__c 
&amp; BR() &amp; 
Cnee__r.EnglishAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONSIGNEE COMPANY NAME</label>
    <type>Text</type>
</CustomField>