force-app/main/default/objects/CustomObject1__c/fields/ConsigneePhone__c.field-meta.xml
<CustomField>
    <fullName>ConsigneePhone__c</fullName>
    <formula>Cnee__r.Phone</formula>
    <label>Consignee Phone</label>
    <type>Text</type>
</CustomField>