force-app/main/default/objects/CustomObject1__c/fields/ConsolidationType__c.field-meta.xml
<CustomField>
    <fullName>ConsolidationType__c</fullName>
    <label>SERVICE REQUIRED(CONSOL/1MMultiH/NORMAL)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>通常貨物(Normal Cargo)</fullName>
                <default>true</default>
                <label>通常貨物(Normal Cargo)</label>
            </value>
            <value>
                <fullName>複数BL貨物(Multiple BL Cargo)</fullName>
            </value>
            <value>
                <fullName>自社混載(Consolidation Cargo)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>