force-app/main/default/objects/CustomObject1__c/fields/Container4__c.field-meta.xml
<CustomField>
    <fullName>Container4__c</fullName>
    <label>CONTAINER TYPE-4</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20&apos;DC</fullName>
                <default>true</default>
                <label>20&apos;DC</label>
            </value>
            <value>
                <fullName>40&apos;DC</fullName>
            </value>
            <value>
                <fullName>45&apos;DC</fullName>
            </value>
            <value>
                <fullName>40&apos;HC</fullName>
            </value>
            <value>
                <fullName>45&apos;HC</fullName>
            </value>
            <value>
                <fullName>20&apos;RF</fullName>
            </value>
            <value>
                <fullName>40&apos;RF</fullName>
            </value>
            <value>
                <fullName>45&apos;RF</fullName>
            </value>
            <value>
                <fullName>20&apos;OT</fullName>
            </value>
            <value>
                <fullName>40&apos;OT</fullName>
            </value>
            <value>
                <fullName>45&apos;OT</fullName>
            </value>
            <value>
                <fullName>20&apos;FR</fullName>
            </value>
            <value>
                <fullName>40&apos;FR</fullName>
            </value>
            <value>
                <fullName>20&apos;ISO</fullName>
            </value>
            <value>
                <fullName>40&apos;ISO</fullName>
            </value>
            <value>
                <fullName>20&apos;IMO</fullName>
            </value>
            <value>
                <fullName>40&apos;IMO</fullName>
            </value>
            <value>
                <fullName>45&apos;IMO</fullName>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>