force-app/main/default/objects/CustomObject1__c/fields/Container_Measurement_Details__c.field-meta.xml
<CustomField>
    <fullName>Container_Measurement_Details__c</fullName>
    <inlineHelpText>Automatically synchronize with Container No/Seal No/Container Size(Package/Gross/Measurement) from Container Detail section at bottom.
Also allow for direct input only when need to be amended manually. This Data will be appeared at B/L.</inlineHelpText>
    <label>CONTAINER DETAIL ON B/L</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>