force-app/main/default/objects/CustomObject1__c/fields/ContainerDetail__c.field-meta.xml
<CustomField>
    <fullName>ContainerDetail__c</fullName>
    <label>Container Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>