force-app/main/default/objects/CustomObject1__c/fields/ContainerDetailBLType2__c.field-meta.xml
<CustomField>
    <fullName>ContainerDetailBLType2__c</fullName>
    <label>Container Detail on B/L-Type2</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>