force-app/main/default/objects/CustomObject1__c/fields/ContainerDetailSIType2__c.field-meta.xml
<CustomField>
    <fullName>ContainerDetailSIType2__c</fullName>
    <label>Container Detail on S/I-Type2</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>