force-app/main/default/objects/CustomObject1__c/fields/ContainerNo__c.field-meta.xml
<CustomField>
    <fullName>ContainerNo__c</fullName>
    <label>CONTAINER NO</label>
    <type>TextArea</type>
</CustomField>