force-app/main/default/objects/CustomObject1__c/fields/ContainerNumber3__c.field-meta.xml
<CustomField>
    <fullName>ContainerNumber3__c</fullName>
    <label>CONTAINER QNTY-3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>