force-app/main/default/objects/CustomObject1__c/fields/ContainerNumber4__c.field-meta.xml
<CustomField>
    <fullName>ContainerNumber4__c</fullName>
    <label>CONTAINER QNTY-4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>