force-app/main/default/objects/CustomObject1__c/fields/ContainerNumberList__c.field-meta.xml
<CustomField>
    <fullName>ContainerNumberList__c</fullName>
    <label>Container Number List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>