force-app/main/default/objects/CustomObject1__c/fields/ContainerSeal_No__c.field-meta.xml
<CustomField>
    <fullName>ContainerSeal_No__c</fullName>
    <description>Changed Label name from CONTAINER &amp; SEAL NO to CONTAINER INFORMATION, so as client will not input container &amp; seal number directly in the field

Aoki</description>
    <inlineHelpText>Please Entry Container Number and Seal Number in Container Detail Section at bottom. Also allow for directly input Container Number and Seal Number only when need to be amended manually.</inlineHelpText>
    <label>CONTAINER NO/SEAL NO-OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>