force-app/main/default/objects/CustomObject1__c/fields/ContainerTypeList__c.field-meta.xml
<CustomField>
    <fullName>ContainerTypeList__c</fullName>
    <label>Container Type List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>