force-app/main/default/objects/CustomObject1__c/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>