force-app/main/default/objects/CustomObject1__c/fields/CusMailAutoSent__c.field-meta.xml
<CustomField>
    <fullName>CusMailAutoSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MailAoutSent</description>
    <inlineHelpText>If checked, CloWTM will send the cargo tracking email to the PIC of Customer and Email to</inlineHelpText>
    <label>AUTO-MAIL FOR CUSTOMER</label>
    <type>Checkbox</type>
</CustomField>