force-app/main/default/objects/CustomObject1__c/fields/CustmerInCharge__c.field-meta.xml
<CustomField>
    <fullName>CustmerInCharge__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PIC OF CUSTOMER</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Field1__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>F/TMS S/O (PIC OF CUSTOMER)</relationshipLabel>
    <relationshipName>CIC</relationshipName>
    <type>Lookup</type>
</CustomField>