force-app/main/default/objects/CustomObject1__c/fields/Custom__c.field-meta.xml
<CustomField>
    <fullName>Custom__c</fullName>
    <inlineHelpText>Choose &apos;Yes&apos; and Customs Clearance Object will be created. Put detail of the customs clearance in to the object accordingly.</inlineHelpText>
    <label>CUSTOMS CLEARANCE SERVICE REQUIRED</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>×(NO)</fullName>
            </value>
            <value>
                <fullName>○(YES)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>