force-app/main/default/objects/CustomObject1__c/fields/Custom_Clearance_Broker__c.field-meta.xml
<CustomField>
    <fullName>Custom_Clearance_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customs Clearance Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>HBL_SHIPMENTS_BROKER</relationshipName>
    <type>Lookup</type>
</CustomField>